# fluxrules

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  docker-compose.yml  folder.sh  mkdocs.yml  pyproject.toml  run.sh  setup.sh
backend/: .dockerignore  Dockerfile  alembic.ini  demo_audit_reports.sh  pyproject.toml  recreate.sh  requirements.txt  rule_engine.db-shm  rule_engine.db-wal  test_create_rules.py
backend/app/: config.py  database.py  main.py  schema_manager.py  security.py
backend/app/analytics/: coverage_report.py  explanation_engine.py  metrics.py  store.py
backend/app/api/: deps.py
backend/app/compiler/: rule_compiler.py
backend/app/engine/: accumulate.py  actions.py  comparison.py  dependency_graph.py  dsl_parser.py  optimized_rete_engine.py  profiler.py  rete_engine.py  rete_network.py  sequence.py
backend/app/execution/: __init__.py  agenda.py  scheduler.py  session_context.py  session_manager.py  session_storage.py  storage_backend.py  working_memory.py
backend/app/models/: __init__.py  audit.py  audit_policy.py  conflicted_rule.py  rule.py  user.py
backend/app/rete/: rete_network.py  rete_nodes.py
backend/app/schemas/: analytics.py  audit_policy.py  event.py  rule-editor.js  rule.py  session.py  user.py
backend/app/services/: __init__.py  analytics_service.py  audit_runner.py  audit_scheduler.py  audit_service.py  auth_service.py  brms_service.py  conflict_detector.py  optimized_conflict_detector.py  rule_service.py  rule_validation_service.py
backend/app/utils/: metrics.py  redis_client.py
backend/app/validation/: _compiled_cache.py  _interval_index.py  _normalization.py  conflict_detection.py  constraint_graph.py  coverage_analysis.py  dead_rule_detection.py  duplicate_detection.py  gap_detection.py  priority_collision_detection.py  redundancy_detection.py  sat_validation.py
backend/app/workers/: event_worker.py  validation_worker.py
backend/docs/: audit_policy_migration.md  index.md  sdk_migration_and_operations.md  static_analysis_report.md  validation_runtime_usage_report.md
backend/migrations/: env.py
backend/migrations/versions/: 977895da9fbe_001_initial_schema_with_audit_integrity.py  a3b4c5d6e7f8_002_add_audit_policies_and_reports.py  (+1 more)
backend/simulation/: cleanup_orphaned_conflicts.py  rules_simulation.py  sample_event_app.py  verify_conflicts.py
backend/tests/: conftest.py  test_accumulate.py  test_analytics.py  test_api.py  test_audit_policy.py  test_beta_node_stateful.py  test_boolean_hardening.py  test_brms_validation.py  test_brms_validation_edge_cases.py  test_conflict_detection.py  test_conflict_detector.py  test_dependency_fallbacks.py  test_dependency_graph.py  test_dependency_graph_api.py  test_dsl_parser.py  test_e2e_admin_integration.py  test_memory_session_storage.py  test_performance.py  test_redis_session_storage.py  test_reliability_hardening.py  test_rete_behavior_scenario.py  test_rete_engine.py  test_rete_network.py  test_rete_retraction.py  test_rule_service.py  test_rules_validate.py  test_security_hardening.py  test_sequence.py  test_session_api.py  test_session_context.py  test_session_manager.py  test_session_storage_integration.py  test_stateful_rete_integration.py  test_validation_performance.py  test_working_memory.py
backup_rete_2026/: network.py  (+2 more)
(+153 files in other folders)
