[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fluxrules"
version = "0.1.0"
description = "Backend-first rules engine library with optional API adapters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FluxRules Contributors" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "pydantic>=2.8"]
sql = ["sqlalchemy>=2.0", "alembic>=1.13"]
redis = ["redis>=5.0"]
otel = ["opentelemetry-api>=1.26", "opentelemetry-sdk>=1.26"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/fluxrules"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
