[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fluxrules"
version = "1.1.0"
description = "FluxRules - Rule Engine SDK and server components"
readme = "../README.md"
requires-python = ">=3.11"

# NOTE: Keep runtime dependencies minimal for the server package.
dependencies = [
    "fastapi[standard]>=0.104.1",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.6",
    "redis>=5.0.1",
    "prometheus-client>=0.19.0",
    "httpx>=0.25.1",
    "email-validator>=2.1.0",
    "python-sat>=1.8.dev13",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.8.0",
    "openpyxl>=3.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
